# ROS-Car

./: .gitignore  操作
devel/: .catkin  .rosinstall  local_setup.fish  local_setup.sh  setup.fish  setup.sh
devel/lib/driver/: driver_node
devel/lib/ele_line_follower/: ele_line_follower.py
devel/lib/orbbec_camera/: common_benchmark_node.py  service_benchmark_node.py
devel/lib/pkgconfig/: driver.pc  ele_line_follower.pc  orbbec_camera.pc  robot_pose_ekf.pc  roscar_slam.pc  rplidar_ros.pc  start_roscar.pc  traffic_light_yolo.pc  usb_cam.pc
devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/usb_cam/: usb_cam_node
devel/share/driver/cmake/: driverConfig.cmake
src/multi_nav_traffic/: 项目描述_简历.txt
src/multi_nav_traffic/launch/: multi_nav.launch  nav.launch
src/multi_nav_traffic/scripts/: multi_nav_traffic_light_node.py
src/roscar_gazebo/: package.xml  setup_gazebo.sh  仿真操作
src/roscar_gazebo/launch/: nav.launch  simulation.launch  slam.launch  start_gazebo_test1.launch
src/roscar_gazebo/map/: roscar_map.yaml
src/roscar_gazebo/models/Test_1/: model.config  model.sdf
src/roscar_gazebo/scripts/: traffic_light_mock.py
src/roscar_gazebo/urdf/: senior_diff_gazebo.urdf
src/roscar_gazebo/worlds/: roscar_empty.world  test_1  test_1.world
src/start_roscar/param/: costmap_common_params.yaml  teb_local_planner_params.yaml
src/traffic_light_yolo/: CMakeLists.txt
src/traffic_light_yolo/scripts/: traffic_light_yolov8_node.py
(+36 files in other folders)
